--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -25,7 +25,11 @@
 </nav>
     <div class="jumbotron"  style="padding:40px;">
       <h1>Products</h1>
-      <table id="table-body"></table>
+      <table id="table-body" onL>
+        <tr>
+            <td></td>
+        </tr>
+      </table>
       <p> <%= productid1 %>  <%= productname1 %> </br>
         <%= productid2 %>  <%= productname2 %>
     </p>
